tests/paczka1/fuzzy1/83299436.err
Error in line 4: 6ILt4 S521 53,1
Error in line 2: hKP8KO18F S155 85,0
Error in line 14: PtL S521 39,0
Error in line 12: tA9phv5V S521 69,0
Error in line 17: PtL A718 45,9
Error in line 32: jRd0prrm A718 25,4
Error in line 28: hKP8KO18F S862 93,9
